# pywinctl

./: README.md  pyproject.toml  setup.py
pywinctl/: __init__.py  _main.py  _win_api.py
pywinctl.egg-info/: PKG-INFO  SOURCES.txt  data.txt
